Save tablet & desktop styling (edit button WIP), fix some spacing margins for app main content, header, list items, table headings, warehouse header, adjust mixins, resized sorting arrows

--- a/src/App.scss
+++ b/src/App.scss
@@ -90,9 +90,13 @@ body {
     box-shadow: 0 2px 5px $color-box-shadow;
     border-radius: 0.25rem;
 
+    @include tablet {
+        margin: 0 2rem;
+    }
+
     @include desktop {
       margin: 0 auto;
-      width: 100%;
+      width: 80%;
       max-width: calc($desktop-breakpoint - 2rem);
     }
   }
