--- a/src/components/TableHeaderWithSorting/TableHeaderWithSorting.scss
+++ b/src/components/TableHeaderWithSorting/TableHeaderWithSorting.scss
@@ -34,4 +34,13 @@
             display: flex;
         }
     }
+
+    &__sort-icon {
+        width: 10%;
+        margin-left: 0.25rem;
+    }
+
+    @include desktop {
+        padding: 0 3rem;
+    }
 }
