--- a/src/pages/WarehouseListPage/WarehouseListPage.scss
+++ b/src/pages/WarehouseListPage/WarehouseListPage.scss
@@ -18,6 +18,11 @@
             flex-direction: row;
             align-items: center;
         }
+
+        @include desktop {
+            padding: 0 1.5rem;
+            margin: 0.5rem 1.5rem -0.75rem;
+        }
     }
 
     &__actions {
